    <https://github.com/jhy/jsoup/pull/1648>

  * Improvement: added the :containsWholeText(text) selector, to match against non-normalized Element text. That can be
    useful when elements can only be distinguished by e.g. specific case, or leading whitespace, etc.
    <https://github.com/jhy/jsoup/issues/1636>

  * Improvement: when evaluating an XPath query against a context element, the complete document is now visible to the
    query, vs only the context element's sub-tree. This enables support for queries outside (parent or sibling) the
    element, e.g. ancestor-or-self::*.
    <https://github.com/jhy/jsoup/issues/1652>

  * Improvement: allow a maxPaddingWidth on the indent level in OutputSettings when pretty printing. This defaults to
    30 to limit the indent level for very deeply nested elements, and may be disabled by setting to -1.
    <https://github.com/jhy/jsoup/pull/1655>

  * Improvement: when cloning a Node or an Element, the clone gets a cloned OwnerDocument containing only that clone, so
    as to preserve applicable settings, such as the Pretty Print settings.
    <https://github.com/jhy/jsoup/issues/763>

  * Improvement: added a convenience method Jsoup.parse(File).
    <https://github.com/jhy/jsoup/issues/1693>

  * Bugfix: boolean attribute names should be case-insensitive, but were not when the parser was configured to preserve
    case.
    <https://github.com/jhy/jsoup/issues/1656>

  * Bugfix: when reading from SequenceInputStreams across the buffer, the input stream was closed too early, resulting
    in missed content.
    <https://github.com/jhy/jsoup/pull/1671>

  * Bugfix: a comment with all dashes (<!----->) should not emit a parse error.
    <https://github.com/jhy/jsoup/issues/1667>

  * Bugfix: when throwing a SelectorParseException for an invalid selector, don't try to String.format the input, as
    that could throw an IllegalFormatException.
    <https://github.com/jhy/jsoup/issues/1691>
